CHANGES IN VERSION 1.27.5
-------------------------

NEW FEATURES

    o new function `seqSetFilterAnnotID()`

UTILITIES

    o `seqBED2GDS()` allows a single file name without the extended file names
      (.bed, .fam, .bim)

    o allele flip in `seqBED2GDS()` to allow major allele to be reference


CHANGES IN VERSION 1.27.3
-------------------------

NEW FEATURES

    o new function `seqUnitSlidingWindows()`

    o new function `seqUnitApply()`

    o new variable "$variant_index", "$sample_index" in `SeqGetData()`, `seqBlockApply()`
      and `seqUnitApply()` to get the indices of selected variants

    o new arguments '.padNA' and '.envir' in `seqGetData()`

UTILITIES

    o `seqAddValue()` adds vectors, matrices and data frame to "annotation/info"

BUG FIXES

    o fix `seqGetData(, "genotype", .useraw=NA)`


CHANGES IN VERSION 1.26.2
-------------------------

NEW FEATURES

    o multiple variable names are allowed in `seqGetData(, var.name=)`

BUG FIXES

    o fix `seqGetData(, "genotype", .useraw=NA)`
      (https://github.com/zhengxwen/SeqArray/issues/58)


CHANGES IN VERSION 1.26.1
-------------------------

BUG FIXES

    o Fails to correctly select duplicate indices in `seqSetFilter(f, variant.sel=)`


CHANGES IN VERSION 1.26.0
-------------------------

NEW FEATURES

    o new function `seqAddValue()`

UTILITIES

    o RLE chromosome coding in `seqBED2GDS()`

    o change the file name "vignettes/R_Integration.Rmd" to "vignettes/SeqArray.Rmd",
      so `vignette("SeqArray")` can work directly

    o correct Estimated remaining Time to Complete (ETC) for load balancing in
      `seqParallel()`

BUG FIXES

    o `seqBED2GDS(, verbose=FALSE)` should have no display

CHANGES

    o use a svg file instead of png in vignettes


CHANGES IN VERSION 1.24.2
-------------------------

NEW FEATURES

    o add the compiler information in `seqSystem()`

    o new arguments '.balancing', '.bl_size' and '.bl_progress' in `seqParallel()`
      for load balancing
